working on home layout

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -1,4 +1,8 @@
 {
+  "comment1": "**************************************",
+  "section1": "*********Global***********",
+  "comment_1": "**************************************",
+
   "dashboard": "ادارة التحكم",
   "add_new": "أضافة جديد",
   "Number_rows": "عدد الصفوف",
@@ -12,42 +16,101 @@
   "warning": "تحذير:",
   "cancel": "ألغاء",
   "yes": "موافق",
+  "empty_result": "لا يوجد نتائج",
 
-  "Number": "",
-  "SecLvl": "",
+  "comment2": "**************************************",
+  "section2": "********* Menu ***********",
+  "comment_2": "**************************************",
+
+  "Account": "Account",
+  "account card": "account card",
+  "Chart of accounts": "Chart of accounts",
+  "Cost centers": "Cost centers",
+  "Const center card": "Const center card",
+  "Chart of cost center": "Chart of cost center",
+  "Currencies": "Currencies",
+  "Currency card": "Currency card",
+  "Bulletin currency prices": "Bulletin currency prices",
+  "Currency rate differences": "Currency rate differences",
+  "Cards": "Cards",
+  "Customer/Supplier Card": "Customer/Supplier Card",
+  "Building Card": "Building Card",
+  "Flat Card": "Flat Card",
+  "Shop Card": "Shop Card",
+  "Parking Card": "Parking Card",
+  "Land Card": "Land Card",
+  "Villa Card": "Villa Card",
+  "Leaser Card": "Leaser Card",
+  "Owner Card": "Owner Card",
+  "Salesman Card": "Salesman Card",
+  "Watchman Card": "Watchman Card",
+  "Quotation Card": "Quotation Card",
+  "name": "Materials",
+  "Material Card": "Material Card",
+  "Group Card": "Group Card",
+  "Chart of Materials": "Chart of Materials",
+  "Store Card": "Store Card",
+  "Chart of Stores": "Chart of Stores",
+  "Activity reports": "Activity reports",
+  "Assets": "Assets",
+  "Asset Category": "Asset Category",
+  "Asset Card": "Asset Card",
+  "Chart of Assets": "Chart of Assets",
+  "Realty Transactions": "Realty Transactions",
+  "Contracts": "Contracts",
+  "Rent Contracts": "Rent Contracts",
+  "Flat rent contract": "Flat rent contract",
+  "Shop rent contract": "Shop rent contract",
+  "Parking rent contract": "Parking rent contract",
+  "Sale Contracts": "Sale Contracts",
+  "Flat sale contract": "Flat sale contract",
+  "Shop sale contract": "Shop sale contract",
+  "Parking sale contract": "Parking sale contract",
+  "Land sale contract": "Land sale contract",
+  "Services contracts": "Services contracts",
+  "Electricity bills": "Electricity bills",
+  "Lawsuit": "Lawsuit",
+  "Owners Associations Fees": "Owners Associations Fees",
+  "Contract cycle": "Contract cycle",
+  "Building electricity meter reading": "Building electricity meter reading",
+  "Internal maintenance": "Internal maintenance",
+  "Maintenance worker card": "Maintenance worker card",
+  "Complaint card": "Complaint card",
+  "Maintenance order": "Maintenance order",
+  "Complaints report": "Complaints report",
+  "Maintenance orders report": "Maintenance orders report",
+  "Maintenance": "Maintenance",
+  "External maintenance": "External maintenance",
+  "Maintenance contracts": "Maintenance contracts",
+  "Maintenance work card": "Maintenance work card",
+  "Maintenance visits": "Maintenance visits",
+  "Maintenance visits report": "Maintenance visits report",
+  "Maintenance Contracts report": "Maintenance Contracts report",
+  "Tools": "Tools",
+  "tool 1": "tool 1",
+  "Contract Type": "Contract Type",
+
+  "comment3": "**************************************",
+  "section3": "********* Forms ***********",
+  "comment_3": "**************************************",
+
   "Barcode": "",
-  "Name": "",
-  "LtnName": "",
-  "CardKind": "",
   "CardKind2": "",
   "CustKind": "",
-  "Nationality": "",
-  "LtnNationality": "",
   "Profession": "",
   "LtnProfession": "",
-  "PassportNO": "",
-  "PassportExpireDate": "",
   "Domicile": "",
   "Security": "",
   "LtnSecurity": "",
   "PhoneJob": "",
-  "Mobile": "",
-  "Note": "",
-  "Trademark": "",
   "LtnTrademark": "",
   "AcGuid": "",
-  "InsuranceAccountGuid": "",
   "VATAccountGuid": "",
   "MemoSecurity": "",
   "LtnMemoSecurity": "",
-  "Address": "",
   "LtnAddress": "",
-  "BoxNo": "",
   "PersonalityNo1": "",
   "PersonalityNo2": "",
-  "Fax": "",
-  "EMail": "",
-  "Adjective": "",
   "LtnAdjective": "",
   "CkHideInSearch": "",
   "ban": "",
@@ -64,29 +127,11 @@
   "CustNote5": "",
   "CustNote6": "",
   "CustNote7": "",
-  "Number": "",
-  "Guid": "",
-  "SecLvl": "",
-  "CardKind": "",
-  "Judicial": "",
   "Ban": "",
-  "NO": "",
-  "UnifiedNum": "",
-  "ManservantRoom": "",
-  "DriverRoom": "",
-  "BuildingGuid": "",
-  "FloorNo": "",
-  "Area": "",
-  "unity": "",
+  "Guid": "",
+  "CardKind": "",
   "ApartmentType": "",
   "FlatKind": "",
-  "Class": "",
-  "Overlooking": "",
-  "CostPrice": "",
-  "CostCurrencyGUID": "",
-  "Note": "",
-  "CostGuid": "",
-  "FlatOwner": "",
   "Details": "",
   "OfferState": "",
   "OfferType": "",
@@ -94,75 +139,36 @@
   "CustomerPhone": "",
   "Restrained": "",
   "PayValue": "",
-  "BondType": "",
-  "BondNo": "",
-  "BondDate": "",
-  "BathroomCount": "",
-  "BalconyCount": "",
-  "WaterCounter": "",
-  "ElectricityCounter": "",
   "RestrainedUserGuid": "",
-  "PurchaseDate": "",
   "BeginLandValue": "",
   "CurrencyBeginLandGuid": "",
   "CurrencyValBeginLand": "",
   "PurchaseAccountGuid": "",
   "CreatePurchaseEntry": "",
   "CommissionPercent": "",
-  "CustGuid": "",
   "FlatCost": "",
   "LastContractGUID": "",
-  "CustOwnerGuid": "",
   "LtnFlatKind": "",
   "LtnApartmentType": "",
   "LtnClass": "",
   "LtnOverlooking": "",
-  "Rent": "",
   "RentCurrencyGuid": "",
-  "BuildingGuid": "",
-  "SecLvl": "",
-  "Number": "",
-  "NO": "",
   "ShopKind": "",
-  "Description": "",
   "Class": "",
-  "Area": "",
   "Unity": "",
-  "Overlooking": "",
   "License1": "",
   "License2": "",
   "UnifiedNum": "",
   "ManservantRoom": "",
   "DriverRoom": "",
-  "Judicial": "",
-  "CostGuid": "",
-  "CustGuid": "",
   "CustOwnerGuid": "",
-  "FlatOwner": "",
-  "WaterCounter": "",
   "BondType": "",
   "BondNo": "",
   "BondDate": "",
-  "ElectricityCounter": "",
-  "Date": "",
-  "Price": "",
-  "CurrencyGuid": "",
-  "CostPrice": "",
-  "CostCurrencyGUID": "",
-  "Rent": "",
-  "Date": "",
-  "Price": "",
-  "CurrencyGuid": "",
-  "Sale": "",
   "SaleCurrencyGUID": "",
-  "Note": "",
-  "AssetsGuid": "",
-  "Value": "",
-  "Note": "",
   "ComplexName": "",
   "VillaNo": "",
   "Emirate": "",
-  "Area": "",
   "Suburb": "",
   "Street": "",
   "DocType": "",
@@ -171,14 +177,10 @@
   "PieceNo": "",
   "BasinNo": "",
   "WaterCounter": "",
-  "ElectricityCounter": "",
   "CuOwnerGuid": "",
   "VillaAccountGuid": "",
-  "CostGuid": "",
   "AccountBankVillaGuid": "",
   "CashAccountGuid": "",
-  "InsuranceAccountGuid": "",
-  "RentInfoGuid": "",
   "FloorCount": "",
   "BalconyCount": "",
   "RoomCount": "",
@@ -189,7 +191,6 @@
   "RoomState": "",
   "LandArea": "",
   "LandAreaBuilding": "",
-  "unity": "",
   "FinishingState": "",
   "SecuritySystem": "",
   "SecurityType": "",
@@ -207,32 +208,8 @@
   "GardenCount": "",
   "GardenArea": "",
   "GardenState": "",
-  "Date": "",
-  "Price": "",
-  "CurrencyGuid": "",
-  "Date": "",
-  "Price": "",
-  "CurrencyGuid": "",
-  "Note": "",
   "AssetsGuid": "",
-  "Value": "",
-  "Note": "",
-  "Number": "",
-  "Name": "",
-  "LtnName": "",
-  "WorkCardNo": "",
-  "Nationality": "",
-  "LtnNationality": "",
-  "PersonalityNo": "",
   "PassportNo": "",
-  "Address": "",
-  "Phone": "",
-  "Mobile": "",
-  "Fax": "",
-  "BoxNo": "",
-  "EMail": "",
-  "Commissionlimit": "",
-  "DiscountPercent": "",
   "AccountGuid": "",
   "BuildingGuid": "",
   "NO": "",
@@ -243,42 +220,18 @@
   "Description": "",
   "Overlooking": "",
   "CustGuid": "",
-  "Judicial": "",
-  "CostGuid": "",
   "PurchaseDate": "",
   "FlatOwner": "",
-  "Date": "",
-  "Price": "",
-  "CurrencyGuid": "",
-  "Date": "",
-  "Price": "",
-  "CurrencyGuid": "",
   "CostPrice": "",
   "CostCurrencyGUID": "",
   "Sale": "",
-  "Note": "",
-  "Number": "",
-  "SecLvl": "",
-  "Name": "",
-  "LtnName": "",
   "Adjective": "",
   "PassportNO": "",
   "PassportExpireDate": "",
   "WorkCardNo": "",
-  "Nationality": "",
-  "LtnNationality": "",
   "Work": "",
-  "PersonalityNo": "",
-  "Address": "",
-  "Phone": "",
-  "Mobile": "",
-  "Fax": "",
-  "BoxNo": "",
-  "EMail": "",
-  "Number": "",
   "EditDate": "",
   "DeliverDate": "",
-  "SecLvl": "",
   "Mark": "",
   "IsAutoRenewal": "",
   "TypeGuid": "",
@@ -295,7 +248,6 @@
   "CurrencyGuid": "",
   "CurrencyVal": "",
   "PayType": "",
-  "Note": "",
   "Note2": "",
   "Purpose": "",
   "NewState": "",
@@ -315,8 +267,6 @@
   "SalesManCommNote": "",
   "CreateContractEntry": "",
   "AcIncomNextYearGUID": "",
-  "InsuranceAccountGuid": "",
-  "Step1Complete": "",
   "Step2Complete": "",
   "Step3Complete": "",
   "Step4Complete": "",
@@ -393,7 +343,6 @@
   "AddValue": "",
   "Number": "",
   "SecLvl": "",
-  "Name": "",
   "LtnName": "",
   "Nationality": "",
   "LtnNationality": "",
@@ -405,7 +354,6 @@
   "BoxNo": "",
   "EMail": "",
   "Code": "",
-  "Name": "",
   "GroupGuid": "",
   "Unity1": "",
   "Barcode1": "",
@@ -419,7 +367,6 @@
   "Barcode3": "",
   "Name": "",
   "Value": "",
-  "Note": "",
   "AvgPrice": "",
   "MaxPrice": "",
   "LastPrice": "",
@@ -433,7 +380,6 @@
   "Price2": "",
   "Price3": "",
   "MatType": "",
-  "StoreGuid": "",
   "Minimum": "",
   "Maximum": "",
   "Note": "",
