--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -14,12 +14,9 @@
   "warning": "warning",
   "cancel": "cancel",
   "yes": "yes",
+  "empty_result": "There are no Results",
 
-  "Number": "Number",
-  "SecLvl": "SecLvl",
   "Barcode": "Barcode",
-  "Name": "Name",
-
   "CardKind2": "CardKind2",
   "CustKind": "CustKind",
   "Profession": "Profession",
@@ -36,8 +33,6 @@
   "LtnAddress": "LtnAddress",
   "PersonalityNo1": "PersonalityNo1",
   "PersonalityNo2": "PersonalityNo2",
-  "EMail": "EMail",
-  "Adjective": "Adjective",
   "LtnAdjective": "LtnAdjective",
   "CkHideInSearch": "CkHideInSearch",
   "ban": "ban",
@@ -54,27 +49,11 @@
   "CustNote5": "CustNote5",
   "CustNote6": "CustNote6",
   "CustNote7": "CustNote7",
+  "Ban": "Ban",
   "Guid": "Guid",
   "CardKind": "CardKind",
-  "Judicial": "Judicial",
-  "Ban": "Ban",
-  "NO": "NO",
-  "UnifiedNum": "UnifiedNum",
-  "ManservantRoom": "ManservantRoom",
-  "DriverRoom": "DriverRoom",
-  "BuildingGuid": "BuildingGuid",
-  "FloorNo": "FloorNo",
-  "Area": "Area",
-  "unity": "unity",
   "ApartmentType": "ApartmentType",
   "FlatKind": "FlatKind",
-  "Class": "Class",
-  "Overlooking": "Overlooking",
-  "CostPrice": "CostPrice",
-  "CostCurrencyGUID": "CostCurrencyGUID",
-  "Note": "Note",
-  "CostGuid": "CostGuid",
-  "FlatOwner": "FlatOwner",
   "Details": "Details",
   "OfferState": "OfferState",
   "OfferType": "OfferType",
@@ -82,46 +61,36 @@
   "CustomerPhone": "CustomerPhone",
   "Restrained": "Restrained",
   "PayValue": "PayValue",
-  "BondType": "BondType",
-  "BondNo": "BondNo",
-  "BondDate": "BondDate",
-  "BathroomCount": "BathroomCount",
-  "BalconyCount": "BalconyCount",
-  "WaterCounter": "WaterCounter",
-  "ElectricityCounter": "ElectricityCounter",
   "RestrainedUserGuid": "RestrainedUserGuid",
-  "PurchaseDate": "PurchaseDate",
   "BeginLandValue": "BeginLandValue",
   "CurrencyBeginLandGuid": "CurrencyBeginLandGuid",
   "CurrencyValBeginLand": "CurrencyValBeginLand",
   "PurchaseAccountGuid": "PurchaseAccountGuid",
   "CreatePurchaseEntry": "CreatePurchaseEntry",
   "CommissionPercent": "CommissionPercent",
-  "CustGuid": "CustGuid",
   "FlatCost": "FlatCost",
   "LastContractGUID": "LastContractGUID",
-  "CustOwnerGuid": "CustOwnerGuid",
   "LtnFlatKind": "LtnFlatKind",
   "LtnApartmentType": "LtnApartmentType",
   "LtnClass": "LtnClass",
   "LtnOverlooking": "LtnOverlooking",
-  "Rent": "Rent",
   "RentCurrencyGuid": "RentCurrencyGuid",
-  "BuildingGuid": "BuildingGuid",
-  "NO": "NO",
   "ShopKind": "ShopKind",
-  "Description": "Description",
   "Class": "Class",
-  "Area": "Area",
   "Unity": "Unity",
-  "Overlooking": "Overlooking",
   "License1": "License1",
   "License2": "License2",
+  "UnifiedNum": "UnifiedNum",
+  "ManservantRoom": "ManservantRoom",
+  "DriverRoom": "DriverRoom",
+  "CustOwnerGuid": "CustOwnerGuid",
+  "BondType": "BondType",
+  "BondNo": "BondNo",
+  "BondDate": "BondDate",
   "SaleCurrencyGUID": "SaleCurrencyGUID",
   "ComplexName": "ComplexName",
   "VillaNo": "VillaNo",
   "Emirate": "Emirate",
-  "Area": "Area",
   "Suburb": "Suburb",
   "Street": "Street",
   "DocType": "DocType",
@@ -130,14 +99,10 @@
   "PieceNo": "PieceNo",
   "BasinNo": "BasinNo",
   "WaterCounter": "WaterCounter",
-  "ElectricityCounter": "ElectricityCounter",
   "CuOwnerGuid": "CuOwnerGuid",
   "VillaAccountGuid": "VillaAccountGuid",
-  "CostGuid": "CostGuid",
   "AccountBankVillaGuid": "AccountBankVillaGuid",
   "CashAccountGuid": "CashAccountGuid",
-  "InsuranceAccountGuid": "InsuranceAccountGuid",
-  "RentInfoGuid": "RentInfoGuid",
   "FloorCount": "FloorCount",
   "BalconyCount": "BalconyCount",
   "RoomCount": "RoomCount",
@@ -148,7 +113,6 @@
   "RoomState": "RoomState",
   "LandArea": "LandArea",
   "LandAreaBuilding": "LandAreaBuilding",
-  "unity": "unity",
   "FinishingState": "FinishingState",
   "SecuritySystem": "SecuritySystem",
   "SecurityType": "SecurityType",
@@ -166,29 +130,8 @@
   "GardenCount": "GardenCount",
   "GardenArea": "GardenArea",
   "GardenState": "GardenState",
-  "Date": "Date",
-  "Price": "Price",
-  "CurrencyGuid": "CurrencyGuid",
-  "Date": "Date",
-  "Price": "Price",
-  "CurrencyGuid": "CurrencyGuid",
-  "Note": "Note",
   "AssetsGuid": "AssetsGuid",
-  "Value": "Value",
-  "Note": "Note",
-  "LtnName": "LtnName",
-  "WorkCardNo": "WorkCardNo",
-  "Nationality": "Nationality",
-  "LtnNationality": "LtnNationality",
-  "PersonalityNo": "PersonalityNo",
   "PassportNo": "PassportNo",
-  "Address": "Address",
-  "Phone": "Phone",
-  "Mobile": "Mobile",
-  "Fax": "Fax",
-  "BoxNo": "BoxNo",
-  "EMail": "EMail",
-  "Commissionlimit": "Commissionlimit",
   "AccountGuid": "AccountGuid",
   "BuildingGuid": "BuildingGuid",
   "NO": "NO",
@@ -199,35 +142,16 @@
   "Description": "Description",
   "Overlooking": "Overlooking",
   "CustGuid": "CustGuid",
-  "Judicial": "Judicial",
-  "CostGuid": "CostGuid",
   "PurchaseDate": "PurchaseDate",
   "FlatOwner": "FlatOwner",
-  "Date": "Date",
-  "Price": "Price",
-  "CurrencyGuid": "CurrencyGuid",
-  "Date": "Date",
-  "Price": "Price",
-  "CurrencyGuid": "CurrencyGuid",
   "CostPrice": "CostPrice",
   "CostCurrencyGUID": "CostCurrencyGUID",
   "Sale": "Sale",
-  "Note": "Note",
-  "LtnName": "LtnName",
   "Adjective": "Adjective",
   "PassportNO": "PassportNO",
   "PassportExpireDate": "PassportExpireDate",
   "WorkCardNo": "WorkCardNo",
-  "Nationality": "Nationality",
-  "LtnNationality": "LtnNationality",
   "Work": "Work",
-  "PersonalityNo": "PersonalityNo",
-  "Address": "Address",
-  "Phone": "Phone",
-  "Mobile": "Mobile",
-  "Fax": "Fax",
-  "BoxNo": "BoxNo",
-  "EMail": "EMail",
   "EditDate": "EditDate",
   "DeliverDate": "DeliverDate",
   "Mark": "Mark",
@@ -246,7 +170,6 @@
   "CurrencyGuid": "CurrencyGuid",
   "CurrencyVal": "CurrencyVal",
   "PayType": "PayType",
-  "Note": "Note",
   "Note2": "Note2",
   "Purpose": "Purpose",
   "NewState": "NewState",
@@ -266,8 +189,6 @@
   "SalesManCommNote": "SalesManCommNote",
   "CreateContractEntry": "CreateContractEntry",
   "AcIncomNextYearGUID": "AcIncomNextYearGUID",
-  "InsuranceAccountGuid": "InsuranceAccountGuid",
-  "Step1Complete": "Step1Complete",
   "Step2Complete": "Step2Complete",
   "Step3Complete": "Step3Complete",
   "Step4Complete": "Step4Complete",
@@ -342,6 +263,8 @@
   "PrvContractGuid": "PrvContractGuid",
   "AddPercent": "AddPercent",
   "AddValue": "AddValue",
+  "Number": "Number",
+  "SecLvl": "SecLvl",
   "LtnName": "LtnName",
   "Nationality": "Nationality",
   "LtnNationality": "LtnNationality",
@@ -364,8 +287,8 @@
   "unityFact3": "unityFact3",
   "unityfix3": "unityfix3",
   "Barcode3": "Barcode3",
+  "Name": "Name",
   "Value": "Value",
-  "Note": "Note",
   "AvgPrice": "AvgPrice",
   "MaxPrice": "MaxPrice",
   "LastPrice": "LastPrice",
