--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -17,6 +17,7 @@
   "cancel": "ألغاء",
   "yes": "موافق",
   "empty_result": "لا يوجد نتائج",
+  "logout": "تسجيل الخروج",
 
   "comment2": "**************************************",
   "section2": "********* Menu ***********",
