--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -15,6 +15,7 @@
   "cancel": "cancel",
   "yes": "yes",
   "empty_result": "There are no Results",
+  "logout": "logout",
 
   "Barcode": "Barcode",
   "CardKind2": "CardKind2",
