--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -18,7 +18,12 @@
   "yes": "موافق",
   "empty_result": "لا يوجد نتائج",
   "logout": "تسجيل الخروج",
-
+  "page": "صفحة",
+  "go_to_page": "أذهب الي صفحة",
+  "show": "عرض",
+  "rows": "صفوف",
+  "row": "صف",
+  "of": "من",
   "comment2": "**************************************",
   "section2": "********* Menu ***********",
   "comment_2": "**************************************",
