updates on layout view

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -642,7 +642,7 @@
   "statement_partial": "statement partial",
   "contract_id": "contract name",
   "total_amount": "total amount",
-  "gen_entries_type": "Constraint style",
+  "gen_entries_type": "Entry Type",
   "voucher_pattern_id": "voucher pattern name",
   "first_batch": "first cash payment",
   "payment_date": "payment date",
@@ -651,7 +651,6 @@
   "each_number": "each number",
   "each_duration": "each duration",
   "first_installment_date": "first installment date",
-  "installment_price": "installment price",
   "final_payment": "final payment",
   "begin_number": "Starting number",
   "installment_date": "installment date",
@@ -906,6 +905,16 @@
   "paid_type": "paid type",
   "revenue_account_id": "revenue account name",
   "customer_account_id": "customer account name",
-  "view_entry":"View entry",
-  "id": "id"
+  "view_entry": "View entry",
+  "id": "id",
+  "apartment_count_each_floor": "apartment (each floor)",
+  "penthouse_count_each_floor": "penthouse (each floor)",
+  "parking_count_each_floor": "parking (each floor)",
+  "mezzanine_count_each_floor": "mezzanine (each floor)",
+  "office_count_each_floor": "office (each floor)",
+  "unit_count": "unit count",
+  "trn_number": "TRN number",
+  "add_new_cash": "Add new Cash",
+  "add_new_chq": "Add new chq",
+  "first_chq_date": "first chq date"
 }
