updates on logic

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -760,6 +760,8 @@
   "created_from": "created_from",
   "created_from_id": "created_from_id",
   "class": "class",
-  
-  "entry_main_data_id": "entry_main_data_id"
+  "customer_id": "customer name",
+  "supplier_id": "supplier name",
+  "entry_main_data_id": "entry_main_data_id",
+  "bill_total_text": "Total text"
 }
