--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -442,7 +442,7 @@
   "move_cost_center_with_decisiveness_granted": "move_cost_center_with_decisiveness_granted",
   "move_cost_center_with_contract_proceeds_rerminating": "move_cost_center_with_contract_proceeds_rerminating",
   "connect_with": "connect_with",
-  "internal_number": "internal_number",
+  "code": "code",
   "beneficiary_name": "beneficiary_name",
   "due_date": "due_date",
   "end_due_date": "end_due_date",
@@ -461,7 +461,7 @@
   "clipboard_number": "clipboard_number",
   "clipboard_date": "clipboard_date",
   "clipboard_receipt_number": "clipboard_receipt_number",
-  "clipboard_internal_number": "clipboard_internal_number",
+  "clipboard_code": "clipboard_code",
   "paper_type": "paper_type",
   "default_print_folder": "default_print_folder",
   "deportable": "deportable",
