--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -544,7 +544,7 @@
   "contract_terms": "contract terms",
   "feedback": "feedback",
   "connect_with": "connect with",
-  "internal_number": "internal number",
+  "code": "code",
   "seller_id": "seller name",
   "client_id": "client name",
   "beneficiary_name": "beneficiary name",
@@ -565,7 +565,7 @@
   "clipboard_number": "clipboard number",
   "clipboard_date": "clipboard date",
   "clipboard_receipt_number": "clipboard receipt number",
-  "clipboard_internal_number": "clipboard internal number",
+  "clipboard_code": "clipboard internal number",
   "paper_type": "paper type",
   "default_print_folder": "default print folder",
   "deportable": "deportable",
