--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -263,6 +263,8 @@
   "LtnPurpose": "LtnPurpose",
   "LtnRentDuration": "LtnRentDuration",
   "LtnRentype": "LtnRentype",
+  "start_duration_date": "start date",
+  "end_duration_date": "end date",
   "LtnTermsOfPayment": "LtnTermsOfPayment",
   "IsRounded": "IsRounded",
   "Leave": "Leave",
@@ -889,7 +891,6 @@
   "building_account_id": "building account name",
   "select_area": "Select area",
   "previous_securing": "previous insurance",
-  "current_securing_percentage": "current insurance percentage",
   "current_securing_value": "current insurance value",
   "gov_number": "gov_number",
   "lawsuit": "lawsuit",
